# matsuzawa-20260113

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-EfficientNetB0-5.3M-VTAB+MD.yaml  proposed-EfficientNetB0-5.3M-VTAB+MD.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
