[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-reg-hydra"
version = "0.1.0"
description = "CaSE-Reg+-HierPrior with Hydra configuration management"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "torch>=1.13",
    "torchvision>=0.14",
    "hydra-core>=1.2",
    "omegaconf>=2.2",
    "wandb>=0.13",
    "matplotlib>=3.3",
    "optuna>=3.0",
    "datasets>=2.0",
]

[tool.setuptools]
packages = ["find:"]
